--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "workbench.colorCustomizations": {
         "activityBar.background": "#95a8b2",
+        "activityBar.activeBackground": "#95a8b2",
         "activityBar.activeBorder": "#f2edf0",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
