--- a/package.json
+++ b/package.json
@@ -60,15 +60,15 @@
         "figures": "3.1.0",
         "fs-extra": "8.1.0",
         "get-stdin": "7.0.0",
-        "ink": "2.5.0",
+        "ink": "^2.7.1",
         "ink-select-input": "3.1.2",
         "ink-text-input": "3.2.1",
-        "meow": "5.0.0",
+        "meow": "^6.1.0",
         "p-queue": "6.2.1",
         "pkg": "4.4.0",
         "prop-types": "15.7.2",
         "ramda": "0.26.1",
-        "react": "16.12.0",
+        "react": "^16.13.1",
         "reopen-tty": "1.1.2",
         "vorpal": "1.12.0"
     }
