--- a/package.json
+++ b/package.json
@@ -20,6 +20,25 @@
         "prerelease": "npm run preversion",
         "release": "release"
     },
+    "dependencies": {
+        "clipboardy": "^2.3.0",
+        "common-tags": "1.8.0",
+        "core-js": "3.4.1",
+        "figures": "3.1.0",
+        "fs-extra": "8.1.0",
+        "get-stdin": "7.0.0",
+        "ink": "^2.7.1",
+        "ink-select-input": "3.1.2",
+        "ink-text-input": "3.2.1",
+        "meow": "^6.1.0",
+        "p-queue": "6.2.1",
+        "pkg": "4.4.0",
+        "prop-types": "15.7.2",
+        "ramda": "0.26.1",
+        "react": "^16.13.1",
+        "reopen-tty": "1.1.2",
+        "vorpal": "^1.12.0"
+    },
     "devDependencies": {
         "@babel/cli": "7.7.0",
         "@babel/core": "7.7.2",
@@ -52,24 +71,5 @@
             "jest-watch-typeahead/filename",
             "jest-watch-typeahead/testname"
         ]
-    },
-    "dependencies": {
-        "clipboardy": "2.1.0",
-        "common-tags": "1.8.0",
-        "core-js": "3.4.1",
-        "figures": "3.1.0",
-        "fs-extra": "8.1.0",
-        "get-stdin": "7.0.0",
-        "ink": "^2.7.1",
-        "ink-select-input": "3.1.2",
-        "ink-text-input": "3.2.1",
-        "meow": "^6.1.0",
-        "p-queue": "6.2.1",
-        "pkg": "4.4.0",
-        "prop-types": "15.7.2",
-        "ramda": "0.26.1",
-        "react": "^16.13.1",
-        "reopen-tty": "1.1.2",
-        "vorpal": "1.12.0"
     }
 }
